<resources>

    <string name="app_name">FaaS</string>

    <string name="about_text">Copyright 2020-2021
        \nAll Rights reserved
        \nFleet as a Service (FAAS)
        \n\n Version: 1.0.0
    </string>
    <string name="logout_text">Do you want to close this application?</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCMn6tBGcTallirM3d4pk3yQItYRaliE08
    </string>

    <string name="found_driver_msg">We found you a driver, \nenjoy your ride!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--menu title-->
    <string name="title_tracking_history">Tracking History</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_assets">Assets</string>
    <string name="title_drivers">Drivers</string>
    <string name="title_locations">Locations</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_logout">Logout</string>

    <!--splash-->
    <string name="splash_version">Version 1.0.0</string>

    <!--login-->
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_password">Enter the password</string>

    <!--Live-->
    <string name="live_title">Live</string>

</resources>
